# nexus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_CHANGES.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  GROKMIRROR_SETUP.md  IMPLEMENTATION_GUIDE.md  Implementation Plan - API Refactor.md  Implementation Plan - DB refactor.md  Implementation Plan - Explore Threads Page.md  Implementation Plan - Frontend API Refactor.md  Implementation Plan - Frontend Surface Simplification.md  Implementation Plan - Meilisearch Search Refactor.md  Implementation Plan - Search API Redesign.md  Implementation Plan - Search Overhaul.md  MAILING_LIST_BROWSER.md  Makefile  README.md  SYNC_PIPELINE_REFACTOR.md  THREADING_IMPROVEMENTS.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_SUMMARY.md  TROUBLESHOOTING.md  docker-compose.yml  docker-start.sh  grokmirror.conf  search-overhaul.md
api-server/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
api-server/docs/: mail-parsing.md  patch-detection.md  testing-database.md  testing-refactor-plan.md
api-server/migrations/: 0000_initial.sql  0001_initial.down.sql  0001_initial.up.sql  0001_patch_metadata.sql  0002_search_overhaul.down.sql  0002_search_overhaul.up.sql  0003_job_queue_rework.down.sql  0003_job_queue_rework.up.sql  0004_remove_embedding_jobs.down.sql  0004_remove_embedding_jobs.up.sql  0005_allow_null_job_list.down.sql  0005_allow_null_job_list.up.sql  0006_search_body_vector.down.sql  0006_search_body_vector.up.sql
api-server/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  request_logger.rs  seed_data.rs
api-server/src/auth/: config.rs  error.rs  guards.rs  jwt.rs  mod.rs  passwords.rs  refresh_store.rs  responses.rs  routes.rs
api-server/src/routes/: admin.rs  auth.rs  authors.rs  emails.rs  health.rs  helpers.rs  mailing_lists.rs  mod.rs  params.rs  search.rs  stats.rs  threads.rs
api-server/src/search/: client.rs  config.rs  embeddings.rs  error.rs  indexer.rs  mod.rs  models.rs  sanitize.rs  service.rs  text.rs  types.rs
api-server/src/sync/: bulk_import.rs  dispatcher.rs  git.rs  importer.rs  jobs.rs  manifest.rs  mod.rs  parser.rs  pg_config.rs  queue.rs  worker.rs
api-server/src/sync/database/: checkpoint.rs  migration.rs  mod.rs  partition.rs  search.rs
api-server/src/threading/: cache.rs  container.rs  epoch_cache.rs  incremental.rs  jwz_algorithm.rs  mod.rs  patch_series.rs  subject_matching.rs
api-server/tests/: health_route.rs  mailing_lists_route.rs  migrations.rs  search_admin_route.rs
(+282 files in other folders)
