[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rocket_cors = "0.6"
gix = { version = "0.68", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "revision"] }
mailparse = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
dateparser = "0.2"
regex = "1.10"
log = "0.4"
env_logger = "0.11"

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "postgres", "chrono"]
