[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_postgres"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc", "uuid", "rocket_db_pools"] }
schemars = { version = "0.8.16", features = ["chrono", "uuid"] }
okapi = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rocket_cors = "0.6"
gix = { version = "0.73", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "revision"] }
mailparse = "0.16"
uuid = { version = "1.18", features = ["v4", "serde"] }
tokio-util = "0.7"
dateparser = "0.2"
regex = "1.12"
log = "0.4"
env_logger = "0.11"
rayon = "1.11"
num_cpus = "1.17"
reqwest = { version = "0.12", features = ["gzip", "json"] }
flate2 = "1.1"
dashmap = "6.1"
parking_lot = "0.12"
sha2 = "0.10"
tempfile = "3.15"
bincode = "1.3"
thiserror = "2.0"
testcontainers = { version = "0.25", default-features = false }
testcontainers-modules = { version = "0.13", features = ["postgres"], default-features = false }
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9", features = ["use_pem"] }
rand = "0.8"
time = { version = "0.3", features = ["macros"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "uuid"]

[dev-dependencies]
